@@ -733,14 +733,46 @@ name|boolean
 name|isTransitive
 parameter_list|()
 block|{
+if|if
+condition|(
+name|node
+operator|.
+name|isRoot
+argument_list|()
+condition|)
+block|{
+comment|// the root node is always considered transitive!
 return|return
-operator|(
+literal|true
+return|;
+block|}
+if|if
+condition|(
+operator|!
 name|data
 operator|.
 name|isTransitive
 argument_list|()
-operator|&&
-operator|(
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+if|if
+condition|(
+operator|!
+name|isParentConfTransitive
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|DependencyDescriptor
+name|dd
+init|=
 name|node
 operator|.
 name|getDependencyDescriptor
@@ -748,21 +780,32 @@ argument_list|(
 name|getParentNode
 argument_list|()
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|dd
+operator|!=
+literal|null
+operator|)
+operator|&&
+name|dd
 operator|.
 name|isTransitive
 argument_list|()
-operator|||
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+return|return
 name|node
 operator|.
 name|hasAnyMergedUsageWithTransitiveDependency
 argument_list|(
 name|rootModuleConf
 argument_list|)
-operator|)
-operator|&&
-name|isParentConfTransitive
-argument_list|()
-operator|)
 return|;
 block|}
 comment|/**      * Checks if the current node's parent configuration is transitive.      *       * @param node      *            current node      * @return true if the node's parent configuration is transitive      */
